# git-testament

./: .travis.yml  CODE_OF_CONDUCT.mdwn  COPYING  Cargo.toml  README.md  shell.nix
.github/workflows/: main.yaml
git-testament-derive/: Cargo.toml  README.md
git-testament-derive/src/: lib.rs
src/: lib.rs
test-template/: Cargo.toml  Cargo.toml.in
test-template/src/: main.rs
tests/: const.rs  no-prelude.rs  simple.rs  testutils.rs
testutils/: Cargo.toml
testutils/src/: lib.rs
testutils/template/: Cargo.toml
testutils/template/src/: main.rs
