[package]
name = "git-testament"
version = "0.1.4"
authors = ["Daniel Silverstone <dsilvers@digital-scurf.org>"]
edition = "2018"

description = "Record git working tree status when compiling your crate"
documentation = "https://docs.rs/git-testament/"
repository = "https://github.com/kinnison/git-testament/"
license = "BSD-3-Clause"
readme = "README.md"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "kinnison/git-testament", branch="master" }

[workspace]
members = [
    "git-testament-derive",
]

[dependencies]
git-testament-derive = { version = "0.1", path = "git-testament-derive" }

[dev-dependencies]
tempdir = "0.3.7"
rand = "^0.4"
regex = "1.1.2"
lazy_static = "1.0.0"
