[package]
name = "git-testament"
version = "0.2.0"
authors = ["Daniel Silverstone <dsilvers@digital-scurf.org>"]
edition = "2018"

description = "Record git working tree status when compiling your crate"
documentation = "https://docs.rs/git-testament/"
repository = "https://github.com/kinnison/git-testament/"
license = "BSD-3-Clause"
readme = "README.md"

[workspace]
members = [
    "git-testament-derive",
]

[dependencies]
no-std-compat = { version = "0.4" }
git-testament-derive = { version = "0.1.11", path = "git-testament-derive" }

[dev-dependencies]
tempdir = "0.3.7"
rand = "0.8"
regex = "1"
lazy_static = "1"

[features]
alloc = ["no-std-compat/alloc"]
default = ["alloc"]
