[package]
name = "git-testament"
version = "0.2.6"
authors = ["Daniel Silverstone <dsilvers@digital-scurf.org>"]
edition = "2021"

description = "Record git working tree status when compiling your crate"
documentation = "https://docs.rs/git-testament/"
repository = "https://github.com/kinnison/git-testament/"
license = "BSD-3-Clause"
readme = "README.md"
include = ["src", "tests", "test-template"]

[workspace]
members = ["git-testament-derive"]

[dependencies]
git-testament-derive = { version = "0.2.1", path = "git-testament-derive" }

[dev-dependencies]
tempfile = "3"
rand = "0.8"
regex = "1"
lazy_static = "1"

[features]
alloc = []
default = ["alloc"]
