[package]
authors = ["Daniel Silverstone <dsilvers@digital-scurf.org>"]
edition = "2018"
name = "git-testament-derive"
version = "0.1.6"

description = "Record git working tree status when compiling your crate - inner procedural macro"
documentation = "https://docs.rs/git-testament/"
repository = "https://github.com/kinnison/git-testament/"
license = "BSD-3-Clause"
readme = "README.md"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "kinnison/git-testament", branch="master" }

[dependencies]
syn = "0.15"
quote = "0.6"
chrono = "0.4"
log = "0.4"

[dev-dependencies]
git-testament = { version="0.1", path = ".." }

[lib]
proc-macro = true
