[package]
authors = ["Daniel Silverstone <dsilvers@digital-scurf.org>"]
edition = "2018"
name = "git-testament-derive"
version = "0.1.14"

description = "Record git working tree status when compiling your crate - inner procedural macro"
documentation = "https://docs.rs/git-testament/"
repository = "https://github.com/kinnison/git-testament/"
license = "BSD-3-Clause"
readme = "README.md"

[dependencies]
syn = "2.0"
quote = "1.0"
time = { version = "0.3", features = ["formatting", "macros"] }
log = "0.4"
proc-macro2 = "1.0"

[dev-dependencies]
git-testament = { version = "0.2.0", path = ".." }

[lib]
proc-macro = true
